# heterogeneity-targeted

./: README.md  pyproject.toml
heterogeneity-targeted/: __main__.py  measure_entropy.py  survival_analyses.py
